Optimize code structure 1